--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,18 @@ body {
     background-color: lightgreen;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 72px;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 42px;
+    text-transform: uppercase;
+}
+
 .flex-box-col {
     display: flex;
     flex-direction: column;
@@ -16,12 +28,6 @@ body {
     justify-content: space-around;
     min-height: 100%;
     width: 100%;
-
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 32px;
 }
 
 /* BEGIN PLAYER SECTION */
@@ -36,6 +42,9 @@ h1 {
 
 .player-side {
     width :50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .player-side-left {
@@ -48,24 +57,33 @@ h1 {
 
 /* BEGIN CHARACTER SELECT */
 
-.ul-player-select {
+#ul-player-select {
     bottom: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    width: 200px;
-    height: 100px;
-    border: 1px solid black;
+    width: 224px;
+    height: auto;
+    border: 3px solid black;
     cursor: pointer;
 }
 
 .li-player-select {
     display: block;
-    width: 48px;
-    height: 48px;
-    border: 1px solid black;
+    width: 50px;
+    height: 50px;
+    border: 3px solid black;
     background-color: lightgrey;
 }
 
 .li-player-select:hover {
     background-color: lightslategray;
+}
+
+/* BEGIN EFFECTS */
+
+.black-and-white {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
