--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -77,9 +77,13 @@ h6 {
 }
 
 .li-player-select {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50px;
     height: 50px;
+    margin: 0 auto;
+    text-align: center;
     border: 3px solid black;
     background-color: lightgrey;
 }
@@ -101,4 +105,13 @@ h6 {
 
 .right-selection {
     background-color: lightskyblue;
+}
+
+i {
+    color: black;
+    font-size: 24px;
+}
+
+.hidden {
+    display: none;
 }
