changed selection class to id

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,11 +99,11 @@ h6 {
   filter: grayscale(100%);
 }
 
-.left-selection {
+#left-selection {
     background-color: lightpink;
 }
 
-.right-selection {
+#right-selection {
     background-color: lightskyblue;
 }
 
