--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -70,9 +70,9 @@ h6 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 224px;
-    height: auto;
-    border: 3px solid black;
+    width: 240px;
+    height: 120px;
+    /* border: 3px solid black; */
     cursor: pointer;
 }
 
@@ -93,6 +93,7 @@ h6 {
 .li-player-select:hover {
     background-color: lightslategray;
     background-blend-mode: normal;
+    box-shadow: 0 0 5px black;
 }
 
 /* BEGIN EFFECTS */
@@ -104,17 +105,33 @@ h6 {
 
 #left-selection {
     background-color: lightpink;
+    border-color: darkred;
     /* background-blend-mode: normal; */
+    box-shadow: 0 0 5px red;
 }
 
 #right-selection {
-    background-color: lightskyblue;
+    background-color: powderblue;
+    border-color: darkblue;
     /* background-blend-mode: normal; */
+    box-shadow: 0 0 5px blue;
 }
 
 .fa-lock {
-    color: black;
+    color: white;
     font-size: 24px;
+}
+
+.red {
+    color: pink;
+    text-shadow: 2px 2px black;
+    background-blend-mode: normal;
+}
+
+.blue {
+    color: lightblue;
+    text-shadow: 2px 2px black;
+    background-blend-mode: normal;
 }
 
 .hidden {
