--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,6 +75,8 @@ h6 {
 .player-select-wrapper {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #ul-player-select {
@@ -109,10 +111,54 @@ h6 {
     box-shadow: 0 0 5px black;
 }
 
-.player-select-toggle {
-    background-color: seagreen;
-    height: 20px;
+/* BEGIN PLAYER TOGGLE */
+
+.toggle-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 5px 0px;
+    font-family: 'Oswald', sans-serif;
+    color: darkslategray;
+}
+
+input[type="checkbox"] {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    }
+
+label {
+    display: block;
+    width: 100px;
+    height: 20px;
+    background-color: mistyrose;
+    border-radius: 100px;
+    position: relative;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+label::after {
+    content: "";
+    width: 50px;
+    height: 20px;
+    background-color: lightcoral;
+    position: absolute;
+    border-radius: 70px;
+    top: 0px;
+    left: 0px;
+    transition: 0.5s;
+}
+
+input:checked + label:after {
+    left: calc(100% - 0px);
+    transform: translateX(-100%);
+    background-color: lightskyblue;
+}
+
+input:checked + label {
+    background-color: aliceblue;
 }
 
 /* BEGIN EFFECTS */
