--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,9 +22,15 @@ h2 {
     text-transform: uppercase;
 }
 
-h6 {
+h5 {
     font-size: 24px;
     font-style: italic;
+}
+
+h6 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 14px;
+    padding-top: 5px;
 }
 
 .flex-box-col {
@@ -117,9 +123,30 @@ h6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     margin: 5px 0px;
     font-family: 'Oswald', sans-serif;
     color: darkslategray;
+}
+
+.switch-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 10px;
+}
+
+.span-toggle {
+
+}
+
+#span-toggle-left {
+    color: lightcoral;
+}
+
+#span-toggle-right {
+    color: lightskyblue;
 }
 
 input[type="checkbox"] {
@@ -197,6 +224,10 @@ input:checked + label {
     color: lightblue;
     text-shadow: 2px 2px black;
     background-blend-mode: normal;
+}
+
+.fade {
+    opacity: 0.3;
 }
 
 .hidden {
