--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,7 @@ h6 {
     font-family: 'Oswald', sans-serif;
     font-size: 14px;
     padding-top: 5px;
+    text-transform: uppercase;
 }
 
 .flex-box-col {
@@ -227,7 +228,7 @@ input:checked + label {
 }
 
 .fade {
-    opacity: 0.3;
+    opacity: 0.5;
 }
 
 .hidden {
