--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -138,15 +138,15 @@ h6 {
     padding: 0px 10px;
 }
 
-.span-toggle {
+/* .span-toggle {
 
-}
+} */
 
-#span-toggle-left {
+#h6-toggle-left {
     color: lightcoral;
 }
 
-#span-toggle-right {
+#h6-toggle-right {
     color: lightskyblue;
 }
 
@@ -229,6 +229,7 @@ input:checked + label {
 
 .fade {
     opacity: 0.5;
+    transition: 0.5s;
 }
 
 .hidden {
