begin adding div containers for top layer objects

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,8 +46,8 @@ h6 {
 /* BEGIN CHARTS */
 
 canvas {
-    height: auto;
-    width: 60vw;
+    height: 50vw;
+    width: 50vw;
 }
 
 /* BEGIN PLAYER SECTION */
@@ -82,6 +82,33 @@ canvas {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right top;
+}
+
+.player-container-top {
+    position: absolute;
+    bottom: 20px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: lightgreen;
+    opacity: 0.5;
+}
+
+.player-names-wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.player-name-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* BEGIN CHARACTER SELECT */
