--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
     font-family: 'Oswald', sans-serif;
-    font-size: 84px;
+    font-size: 112px;
     text-transform: uppercase;
     padding: 5px;
 }
@@ -46,8 +46,8 @@ h6 {
 /* BEGIN CHARTS */
 
 canvas {
-    height: 50vw;
-    width: 50vw;
+    height: auto;
+    width: auto;
 }
 
 /* BEGIN PLAYER SECTION */
@@ -84,33 +84,6 @@ canvas {
     background-position: right top;
 }
 
-.player-container-top {
-    position: absolute;
-    bottom: 20px;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    background-color: lightgreen;
-    opacity: 0.5;
-}
-
-.player-names-wrapper {
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
-}
-
-.player-name-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 /* BEGIN CHARACTER SELECT */
 
 .player-select-wrapper {
@@ -121,6 +94,7 @@ canvas {
 }
 
 #ul-player-select {
+    z-index: 1;
     bottom: 0;
     display: flex;
     justify-content: center;
@@ -172,10 +146,6 @@ canvas {
     align-items: center;
     padding: 0px 10px;
 }
-
-/* .span-toggle {
-
-} */
 
 #h6-toggle-left {
     color: lightcoral;
