--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -34,6 +34,13 @@ h6 {
     text-transform: uppercase;
 }
 
+.flex-box-row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
 .flex-box-col {
     display: flex;
     flex-direction: column;
@@ -49,6 +56,7 @@ h6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 50%;
     width: 50%;
     /* background-color: lightgreen; */
 }
@@ -67,9 +75,8 @@ h6 {
     width :50vw;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding-top: 100px;
 }
 
 #player-side-left {
@@ -126,6 +133,7 @@ h6 {
     background-size: contain;
     background-blend-mode: luminosity;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .li-player-select:hover {
@@ -200,6 +208,29 @@ input:checked + label:after {
 
 input:checked + label {
     background-color: aliceblue;
+}
+
+/* BEGIN ASIDES */
+
+aside {
+    width: 20vw;
+    padding: 20px;
+    background-color: rgb(255, 255, 240, 0.5);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-style: italic;
+    line-height: 1.3em;
+    border-radius: 5px;
+    color: darkslategray;
+    /* text-shadow: 1px 1px white; */
+}
+
+#aside-left {
+    text-align: right;
+}
+
+#aside-right {
+
 }
 
 /* BEGIN EFFECTS */
