add minor details to toggle

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,37 +7,33 @@ body {
     min-height: 100%;
     min-width: 600px;
     height: 100%;
-    /* background-color: lightgreen; */
 }
 
 h1 {
     font-family: 'Oswald', sans-serif;
     font-size: 96px;
     text-transform: uppercase;
-    /* padding: 5px; */
 }
 
 h2 {
     font-family: 'Allison', cursive;
     font-size: 148px;
-    /* color: lightcoral; */
     color: black;
     font-weight: bold;
     text-align: center;
     display: none;
-    /* text-shadow: 1px 1px lightgray; */
 }
 
 h3 {
     font-family: 'Allison', cursive;
     font-size: 42px;
     font-weight: bolder;
+    color: darkslategray;
 }
 
 h5 {
     font-family: 'Allison', cursive;
     font-size: 32px;
-    /* font-size: 24px; */
     font-style: italic;
     color: dimgray;
 }
@@ -74,11 +70,7 @@ h6 {
 /* BEGIN HEADER */
 
 header {
-    /* position: absolute; */
-    /* background-color: black; */
     width: 100%;
-    /* opacity: 0.3; */
-    /* height: auto; */
 }
 
 /* BEGIN CHARTS */
@@ -111,23 +103,19 @@ header {
 }
 
 #player-side-left {
-    /* background-color: mistyrose; */
     background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left top;
     display: flex;
-    /* align-items: flex-start; */
 }
 
 #player-side-right {
-    /* background-color: lightcyan; */
     background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right top;
     display: flex;
-    /* align-items: flex-end; */
 }
 
 /* BEGIN CHARACTER SELECT */
@@ -148,7 +136,6 @@ header {
     flex-wrap: wrap;
     width: 350px;
     height: 175px;
-    /* border: 3px solid black; */
 }
 
 .li-player-select {
@@ -303,20 +290,26 @@ footer {
 #left-selection {
     background-color: lightpink;
     border-color: darkred;
-    /* background-blend-mode: normal; */
     box-shadow: 0 0 5px red;
 }
 
 #right-selection {
     background-color: powderblue;
     border-color: darkblue;
-    /* background-blend-mode: normal; */
     box-shadow: 0 0 5px blue;
 }
 
 .fa-lock {
     color: white;
     font-size: 24px;
+}
+
+.lightcoral {
+    color: lightcoral;
+}
+
+.lightskyblue {
+    color: lightskyblue;
 }
 
 .red {
@@ -345,7 +338,6 @@ footer {
   display: block;
 }
 
-/* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 300px;
@@ -362,10 +354,12 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.3em;
   cursor: help;
-  /* font-style: italic; */
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+#versus-select {
+    transition: 0.5s;
 }
